fixes "contact" h1 positioning; visual bug
- h1 on contact page is hidden when page is full width (the h1 text positions to the left of the image and is white so not visible)
- removing these four lines in the class `.page-hero-image` appears to fix the issue so that the h1 is always positioned within the background image
- doesn't seem to have any other effects on how the header looks

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -18,10 +18,6 @@
     padding-right: var(--oe-padding-large);
     padding-bottom: var(--oe-padding);
     position: relative;
-    left: 50%;
-    margin-left: -50vw;
-    right: 50%;
-    margin-right: -50vw;
     display: flex;
     justify-content: start;
     margin-bottom: var(--oe-padding-large);
